// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParamElement render should render param 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="param"
        data-draggable="true"
      >
        <div
          class="moveIcon"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <button
              class="unnnic-button unnnic-button--size-small unnnic-button--terciary unnnic-button-scheme-- unnnic-button--icon-on-center"
              data-draggable="true"
              data-passed-props="[object Object]"
              data-v-00f478da=""
            >
              <!---->
              <!---->
              <span
                class="unnnic-icon unnnic-icon__size--sm"
                data-v-00f478da=""
                data-v-a1936218=""
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="primary"
                    clip-rule="evenodd"
                    d="M7.91422 2.00989C7.86649 2.02164 7.82897 2.03857 7.79282 2.06468C7.74877 2.09651 3.54653 6.30199 3.52607 6.33472C3.50908 6.36192 3.48965 6.40724 3.47876 6.44512C3.47512 6.45777 3.47253 6.49256 3.47249 6.52912C3.47245 6.57971 3.4745 6.59875 3.48334 6.62971C3.51797 6.75101 3.61974 6.85233 3.74065 6.88586C3.76225 6.89185 3.78827 6.89385 3.84174 6.89362C3.90591 6.89335 3.91779 6.89197 3.95107 6.88089C4.03806 6.85193 3.87354 7.01214 6.02937 4.85694L8.00101 2.88589L9.97264 4.85694C12.1296 7.01331 11.9645 6.85256 12.0509 6.88056C12.1015 6.89694 12.1868 6.90098 12.2419 6.8896C12.3223 6.87299 12.4043 6.82035 12.4562 6.75198C12.5112 6.67955 12.5296 6.6236 12.5295 6.52912C12.5295 6.49256 12.5269 6.45777 12.5233 6.44512C12.5124 6.40724 12.4929 6.36192 12.4759 6.33472C12.4555 6.30199 8.25324 2.09651 8.20919 2.06468C8.12948 2.0071 8.01329 1.98552 7.91422 2.00989ZM3.79339 9.10481C3.74621 9.11027 3.69174 9.12854 3.6508 9.15264C3.60962 9.17687 3.5463 9.2393 3.52323 9.2784C3.4526 9.39811 3.45254 9.53867 3.52308 9.66011C3.53538 9.68128 4.02231 10.1712 5.64881 11.7988C6.8092 12.9599 7.77156 13.9193 7.7874 13.9306C7.90755 14.0169 8.06109 14.0231 8.19195 13.9471C8.21312 13.9348 8.70302 13.4479 10.3306 11.8214C11.4918 10.661 12.4511 9.69861 12.4625 9.68277C12.5114 9.61453 12.5295 9.5569 12.5295 9.46917C12.5295 9.42155 12.5273 9.40144 12.5188 9.37169C12.4529 9.14042 12.194 9.03352 11.9818 9.14993C11.9525 9.16598 11.7404 9.37651 9.97505 11.1413L8.00101 13.1148L6.02458 11.139L4.04814 9.16328L4.00254 9.14115C3.93469 9.1082 3.86652 9.09636 3.79339 9.10481Z"
                    fill="#D0D3D9"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="unnnic-button__label"
                data-v-00f478da=""
              >
                  
              </span>
              <!---->
            </button>
          </div>
        </div>
        <div
          class="choice "
          style="flex: 1;"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_service_call_param"
            >
              <!---->
              <span
                class="dropdown"
                data-v-6fe2671f=""
              >
                <div
                  data-v-2d3b8b50=""
                  data-v-6fe2671f=""
                  readonly="readonly"
                  style="position: relative;"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="arrow-button-down-1"
                    iconrightclickable="true"
                    placeholder="Param"
                    readonly="readonly"
                    size="0"
                    type="text"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-cloudy"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  __use_react_component_wrap=""
                  data-v-6fe2671f=""
                  style="all: unset;"
                >
                  <option
                    label="Identificação"
                    value="Identificação"
                  >
                    Identificação
                  </option>
                  <option
                    label="Endereço"
                    value="Endereço"
                  >
                    Endereço
                  </option>
                  <option
                    label="Telefone e Email"
                    value="Telefone e Email"
                  >
                    Telefone e Email
                  </option>
                  <option
                    label="Observações"
                    value="Observações"
                  >
                    Observações
                  </option>
                </div>
                <div
                  class="dropdown-data"
                  data-v-6fe2671f=""
                  style="position: fixed; top: 0px;"
                />
              </span>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="choice "
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_service_call_param_filter"
            >
              <!---->
              <span
                class="dropdown"
                data-v-6fe2671f=""
              >
                <div
                  data-v-2d3b8b50=""
                  data-v-6fe2671f=""
                  readonly="readonly"
                  style="position: relative;"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="arrow-button-down-1"
                    iconrightclickable="true"
                    placeholder="Filter"
                    readonly="readonly"
                    size="0"
                    type="text"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-cloudy"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  __use_react_component_wrap=""
                  data-v-6fe2671f=""
                  style="all: unset;"
                >
                  <option
                    label="Código do Contato"
                    value="nCod"
                  >
                    Código do Contato
                  </option>
                  <option
                    label="Código do Contato"
                    value="nCod"
                  >
                    Código do Contato
                  </option>
                  <option
                    label="Código de Integração"
                    value="cCodInt"
                  >
                    Código de Integração
                  </option>
                  <option
                    label="Nome do contato"
                    value="cNome"
                  >
                    Nome do contato
                  </option>
                  <option
                    label="Sobrenome do contato"
                    value="cSobrenome"
                  >
                    Sobrenome do contato
                  </option>
                  <option
                    label="Cargo"
                    value="cCargo"
                  >
                    Cargo
                  </option>
                  <option
                    label="Data de Nascimento"
                    value="dDtNasc"
                  >
                    Data de Nascimento
                  </option>
                  <option
                    label="Código do Vendedor"
                    value="nCodVend"
                  >
                    Código do Vendedor
                  </option>
                  <option
                    label="Código da Conta"
                    value="nCodConta"
                  >
                    Código da Conta
                  </option>
                </div>
                <div
                  class="dropdown-data"
                  data-v-6fe2671f=""
                  style="position: fixed; top: 0px;"
                />
              </span>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="data"
        >
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select completionInput"
                data-passed-props="[object Object]"
                data-testid="Service Call Param Data"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      placeholder="Buscar por"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          data-draggable="true"
          data-use-vue-component-wrap=""
        >
          <span
            class="unnnic-icon unnnic-icon__size--sm unnnic--clickable unnnic-icon-scheme--neutral-cloudy remove_icon"
            data-passed-props="[object Object]"
            data-testid="remove-param-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
            data-v-a1936218=""
          >
            <svg
              fill="none"
              viewBox="0 0 40 40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="primary"
                d="M20 35.0005C11.7287 35.0005 5 28.2717 5 20.0005C5 11.7292 11.7287 5.00049 20 5.00049C28.2712 5.00049 35 11.7292 35 20.0005C35 28.2717 28.2712 35.0005 20 35.0005ZM20 6.87549C12.7625 6.87549 6.875 12.763 6.875 20.0005C6.875 27.238 12.7625 33.1255 20 33.1255C27.2375 33.1255 33.125 27.238 33.125 20.0005C33.125 12.763 27.2375 6.87549 20 6.87549Z"
                fill="#3B414D"
              />
              <path
                class="primary"
                d="M25.625 26.563C25.375 26.563 25.1388 26.4655 24.9625 26.288L20 21.3255L15.0388 26.288C14.8625 26.4655 14.6263 26.563 14.3763 26.563C14.1263 26.563 13.89 26.4655 13.7138 26.288C13.5363 26.1105 13.4388 25.8755 13.4388 25.6255C13.4388 25.3755 13.5363 25.1392 13.7138 24.963L18.6738 20.0005L13.7113 15.038C13.5338 14.8617 13.4363 14.6255 13.4363 14.3755C13.4363 14.1255 13.5338 13.8892 13.7113 13.713C13.8875 13.5355 14.1238 13.438 14.3738 13.438C14.6238 13.438 14.86 13.5355 15.0363 13.713L19.9988 18.6755L24.96 13.713C25.1375 13.5355 25.3725 13.438 25.6225 13.438C25.8725 13.438 26.1088 13.5355 26.285 13.713C26.4625 13.8892 26.56 14.1255 26.56 14.3755C26.56 14.6255 26.4625 14.8617 26.285 15.038L21.325 20.0005L26.2875 24.963C26.465 25.1405 26.5625 25.3755 26.5625 25.6255C26.5625 25.8755 26.465 26.1117 26.2875 26.288C26.11 26.4642 25.875 26.563 25.625 26.563Z"
                fill="#3B414D"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ParamElement update handles data change 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="param"
        data-draggable="true"
      >
        <div
          class="moveIcon"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <button
              class="unnnic-button unnnic-button--size-small unnnic-button--terciary unnnic-button-scheme-- unnnic-button--icon-on-center"
              data-draggable="true"
              data-passed-props="[object Object]"
              data-v-00f478da=""
            >
              <!---->
              <!---->
              <span
                class="unnnic-icon unnnic-icon__size--sm"
                data-v-00f478da=""
                data-v-a1936218=""
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="primary"
                    clip-rule="evenodd"
                    d="M7.91422 2.00989C7.86649 2.02164 7.82897 2.03857 7.79282 2.06468C7.74877 2.09651 3.54653 6.30199 3.52607 6.33472C3.50908 6.36192 3.48965 6.40724 3.47876 6.44512C3.47512 6.45777 3.47253 6.49256 3.47249 6.52912C3.47245 6.57971 3.4745 6.59875 3.48334 6.62971C3.51797 6.75101 3.61974 6.85233 3.74065 6.88586C3.76225 6.89185 3.78827 6.89385 3.84174 6.89362C3.90591 6.89335 3.91779 6.89197 3.95107 6.88089C4.03806 6.85193 3.87354 7.01214 6.02937 4.85694L8.00101 2.88589L9.97264 4.85694C12.1296 7.01331 11.9645 6.85256 12.0509 6.88056C12.1015 6.89694 12.1868 6.90098 12.2419 6.8896C12.3223 6.87299 12.4043 6.82035 12.4562 6.75198C12.5112 6.67955 12.5296 6.6236 12.5295 6.52912C12.5295 6.49256 12.5269 6.45777 12.5233 6.44512C12.5124 6.40724 12.4929 6.36192 12.4759 6.33472C12.4555 6.30199 8.25324 2.09651 8.20919 2.06468C8.12948 2.0071 8.01329 1.98552 7.91422 2.00989ZM3.79339 9.10481C3.74621 9.11027 3.69174 9.12854 3.6508 9.15264C3.60962 9.17687 3.5463 9.2393 3.52323 9.2784C3.4526 9.39811 3.45254 9.53867 3.52308 9.66011C3.53538 9.68128 4.02231 10.1712 5.64881 11.7988C6.8092 12.9599 7.77156 13.9193 7.7874 13.9306C7.90755 14.0169 8.06109 14.0231 8.19195 13.9471C8.21312 13.9348 8.70302 13.4479 10.3306 11.8214C11.4918 10.661 12.4511 9.69861 12.4625 9.68277C12.5114 9.61453 12.5295 9.5569 12.5295 9.46917C12.5295 9.42155 12.5273 9.40144 12.5188 9.37169C12.4529 9.14042 12.194 9.03352 11.9818 9.14993C11.9525 9.16598 11.7404 9.37651 9.97505 11.1413L8.00101 13.1148L6.02458 11.139L4.04814 9.16328L4.00254 9.14115C3.93469 9.1082 3.86652 9.09636 3.79339 9.10481Z"
                    fill="#D0D3D9"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="unnnic-button__label"
                data-v-00f478da=""
              >
                  
              </span>
              <!---->
            </button>
          </div>
        </div>
        <div
          class="choice "
          style="flex: 1;"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_service_call_param"
            >
              <!---->
              <span
                class="dropdown"
                data-v-6fe2671f=""
              >
                <div
                  data-v-2d3b8b50=""
                  data-v-6fe2671f=""
                  readonly="readonly"
                  style="position: relative;"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="arrow-button-down-1"
                    iconrightclickable="true"
                    placeholder="Param"
                    readonly="readonly"
                    size="13"
                    type="text"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-dark"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  __use_react_component_wrap=""
                  data-v-6fe2671f=""
                  style="all: unset;"
                >
                  <option
                    label="Identificação"
                    value="Identificação"
                  >
                    Identificação
                  </option>
                  <option
                    label="Endereço"
                    value="Endereço"
                  >
                    Endereço
                  </option>
                  <option
                    label="Telefone e Email"
                    value="Telefone e Email"
                  >
                    Telefone e Email
                  </option>
                  <option
                    label="Observações"
                    value="Observações"
                  >
                    Observações
                  </option>
                </div>
                <div
                  class="dropdown-data"
                  data-v-6fe2671f=""
                  style="position: fixed; top: 0px;"
                />
              </span>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="choice "
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_service_call_param_filter"
            >
              <!---->
              <span
                class="dropdown"
                data-v-6fe2671f=""
              >
                <div
                  data-v-2d3b8b50=""
                  data-v-6fe2671f=""
                  readonly="readonly"
                  style="position: relative;"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="arrow-button-down-1"
                    iconrightclickable="true"
                    placeholder="Filter"
                    readonly="readonly"
                    size="17"
                    type="text"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-dark"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  __use_react_component_wrap=""
                  data-v-6fe2671f=""
                  style="all: unset;"
                >
                  <option
                    label="Código do Contato"
                    value="nCod"
                  >
                    Código do Contato
                  </option>
                  <option
                    label="Código do Contato"
                    value="nCod"
                  >
                    Código do Contato
                  </option>
                  <option
                    label="Código de Integração"
                    value="cCodInt"
                  >
                    Código de Integração
                  </option>
                  <option
                    label="Nome do contato"
                    value="cNome"
                  >
                    Nome do contato
                  </option>
                  <option
                    label="Sobrenome do contato"
                    value="cSobrenome"
                  >
                    Sobrenome do contato
                  </option>
                  <option
                    label="Cargo"
                    value="cCargo"
                  >
                    Cargo
                  </option>
                  <option
                    label="Data de Nascimento"
                    value="dDtNasc"
                  >
                    Data de Nascimento
                  </option>
                  <option
                    label="Código do Vendedor"
                    value="nCodVend"
                  >
                    Código do Vendedor
                  </option>
                  <option
                    label="Código da Conta"
                    value="nCodConta"
                  >
                    Código da Conta
                  </option>
                </div>
                <div
                  class="dropdown-data"
                  data-v-6fe2671f=""
                  style="position: fixed; top: 0px;"
                />
              </span>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="data"
        >
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select completionInput"
                data-passed-props="[object Object]"
                data-testid="Service Call Param Data"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      placeholder="Buscar por"
                      size="8"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          data-draggable="true"
          data-use-vue-component-wrap=""
        >
          <span
            class="unnnic-icon unnnic-icon__size--sm unnnic--clickable unnnic-icon-scheme--neutral-cloudy remove_icon"
            data-passed-props="[object Object]"
            data-testid="remove-param-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
            data-v-a1936218=""
          >
            <svg
              fill="none"
              viewBox="0 0 40 40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="primary"
                d="M20 35.0005C11.7287 35.0005 5 28.2717 5 20.0005C5 11.7292 11.7287 5.00049 20 5.00049C28.2712 5.00049 35 11.7292 35 20.0005C35 28.2717 28.2712 35.0005 20 35.0005ZM20 6.87549C12.7625 6.87549 6.875 12.763 6.875 20.0005C6.875 27.238 12.7625 33.1255 20 33.1255C27.2375 33.1255 33.125 27.238 33.125 20.0005C33.125 12.763 27.2375 6.87549 20 6.87549Z"
                fill="#3B414D"
              />
              <path
                class="primary"
                d="M25.625 26.563C25.375 26.563 25.1388 26.4655 24.9625 26.288L20 21.3255L15.0388 26.288C14.8625 26.4655 14.6263 26.563 14.3763 26.563C14.1263 26.563 13.89 26.4655 13.7138 26.288C13.5363 26.1105 13.4388 25.8755 13.4388 25.6255C13.4388 25.3755 13.5363 25.1392 13.7138 24.963L18.6738 20.0005L13.7113 15.038C13.5338 14.8617 13.4363 14.6255 13.4363 14.3755C13.4363 14.1255 13.5338 13.8892 13.7113 13.713C13.8875 13.5355 14.1238 13.438 14.3738 13.438C14.6238 13.438 14.86 13.5355 15.0363 13.713L19.9988 18.6755L24.96 13.713C25.1375 13.5355 25.3725 13.438 25.6225 13.438C25.8725 13.438 26.1088 13.5355 26.285 13.713C26.4625 13.8892 26.56 14.1255 26.56 14.3755C26.56 14.6255 26.4625 14.8617 26.285 15.038L21.325 20.0005L26.2875 24.963C26.465 25.1405 26.5625 25.3755 26.5625 25.6255C26.5625 25.8755 26.465 26.1117 26.2875 26.288C26.11 26.4642 25.875 26.563 25.625 26.563Z"
                fill="#3B414D"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ParamElement update handles filter change 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="param"
        data-draggable="true"
      >
        <div
          class="moveIcon"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <button
              class="unnnic-button unnnic-button--size-small unnnic-button--terciary unnnic-button-scheme-- unnnic-button--icon-on-center"
              data-draggable="true"
              data-passed-props="[object Object]"
              data-v-00f478da=""
            >
              <!---->
              <!---->
              <span
                class="unnnic-icon unnnic-icon__size--sm"
                data-v-00f478da=""
                data-v-a1936218=""
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="primary"
                    clip-rule="evenodd"
                    d="M7.91422 2.00989C7.86649 2.02164 7.82897 2.03857 7.79282 2.06468C7.74877 2.09651 3.54653 6.30199 3.52607 6.33472C3.50908 6.36192 3.48965 6.40724 3.47876 6.44512C3.47512 6.45777 3.47253 6.49256 3.47249 6.52912C3.47245 6.57971 3.4745 6.59875 3.48334 6.62971C3.51797 6.75101 3.61974 6.85233 3.74065 6.88586C3.76225 6.89185 3.78827 6.89385 3.84174 6.89362C3.90591 6.89335 3.91779 6.89197 3.95107 6.88089C4.03806 6.85193 3.87354 7.01214 6.02937 4.85694L8.00101 2.88589L9.97264 4.85694C12.1296 7.01331 11.9645 6.85256 12.0509 6.88056C12.1015 6.89694 12.1868 6.90098 12.2419 6.8896C12.3223 6.87299 12.4043 6.82035 12.4562 6.75198C12.5112 6.67955 12.5296 6.6236 12.5295 6.52912C12.5295 6.49256 12.5269 6.45777 12.5233 6.44512C12.5124 6.40724 12.4929 6.36192 12.4759 6.33472C12.4555 6.30199 8.25324 2.09651 8.20919 2.06468C8.12948 2.0071 8.01329 1.98552 7.91422 2.00989ZM3.79339 9.10481C3.74621 9.11027 3.69174 9.12854 3.6508 9.15264C3.60962 9.17687 3.5463 9.2393 3.52323 9.2784C3.4526 9.39811 3.45254 9.53867 3.52308 9.66011C3.53538 9.68128 4.02231 10.1712 5.64881 11.7988C6.8092 12.9599 7.77156 13.9193 7.7874 13.9306C7.90755 14.0169 8.06109 14.0231 8.19195 13.9471C8.21312 13.9348 8.70302 13.4479 10.3306 11.8214C11.4918 10.661 12.4511 9.69861 12.4625 9.68277C12.5114 9.61453 12.5295 9.5569 12.5295 9.46917C12.5295 9.42155 12.5273 9.40144 12.5188 9.37169C12.4529 9.14042 12.194 9.03352 11.9818 9.14993C11.9525 9.16598 11.7404 9.37651 9.97505 11.1413L8.00101 13.1148L6.02458 11.139L4.04814 9.16328L4.00254 9.14115C3.93469 9.1082 3.86652 9.09636 3.79339 9.10481Z"
                    fill="#D0D3D9"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="unnnic-button__label"
                data-v-00f478da=""
              >
                  
              </span>
              <!---->
            </button>
          </div>
        </div>
        <div
          class="choice "
          style="flex: 1;"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_service_call_param"
            >
              <!---->
              <span
                class="dropdown"
                data-v-6fe2671f=""
              >
                <div
                  data-v-2d3b8b50=""
                  data-v-6fe2671f=""
                  readonly="readonly"
                  style="position: relative;"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="arrow-button-down-1"
                    iconrightclickable="true"
                    placeholder="Param"
                    readonly="readonly"
                    size="13"
                    type="text"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-dark"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  __use_react_component_wrap=""
                  data-v-6fe2671f=""
                  style="all: unset;"
                >
                  <option
                    label="Identificação"
                    value="Identificação"
                  >
                    Identificação
                  </option>
                  <option
                    label="Endereço"
                    value="Endereço"
                  >
                    Endereço
                  </option>
                  <option
                    label="Telefone e Email"
                    value="Telefone e Email"
                  >
                    Telefone e Email
                  </option>
                  <option
                    label="Observações"
                    value="Observações"
                  >
                    Observações
                  </option>
                </div>
                <div
                  class="dropdown-data"
                  data-v-6fe2671f=""
                  style="position: fixed; top: 0px;"
                />
              </span>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="choice "
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_service_call_param_filter"
            >
              <!---->
              <span
                class="dropdown"
                data-v-6fe2671f=""
              >
                <div
                  data-v-2d3b8b50=""
                  data-v-6fe2671f=""
                  readonly="readonly"
                  style="position: relative;"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="arrow-button-down-1"
                    iconrightclickable="true"
                    placeholder="Filter"
                    readonly="readonly"
                    size="15"
                    type="text"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-dark"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  __use_react_component_wrap=""
                  data-v-6fe2671f=""
                  style="all: unset;"
                >
                  <option
                    label="Código da Conta"
                    value="nCodConta"
                  >
                    Código da Conta
                  </option>
                  <option
                    label="Código do Contato"
                    value="nCod"
                  >
                    Código do Contato
                  </option>
                  <option
                    label="Código de Integração"
                    value="cCodInt"
                  >
                    Código de Integração
                  </option>
                  <option
                    label="Nome do contato"
                    value="cNome"
                  >
                    Nome do contato
                  </option>
                  <option
                    label="Sobrenome do contato"
                    value="cSobrenome"
                  >
                    Sobrenome do contato
                  </option>
                  <option
                    label="Cargo"
                    value="cCargo"
                  >
                    Cargo
                  </option>
                  <option
                    label="Data de Nascimento"
                    value="dDtNasc"
                  >
                    Data de Nascimento
                  </option>
                  <option
                    label="Código do Vendedor"
                    value="nCodVend"
                  >
                    Código do Vendedor
                  </option>
                  <option
                    label="Código da Conta"
                    value="nCodConta"
                  >
                    Código da Conta
                  </option>
                </div>
                <div
                  class="dropdown-data"
                  data-v-6fe2671f=""
                  style="position: fixed; top: 0px;"
                />
              </span>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="data"
        >
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select completionInput"
                data-passed-props="[object Object]"
                data-testid="Service Call Param Data"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      placeholder="Buscar por"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          data-draggable="true"
          data-use-vue-component-wrap=""
        >
          <span
            class="unnnic-icon unnnic-icon__size--sm unnnic--clickable unnnic-icon-scheme--neutral-cloudy remove_icon"
            data-passed-props="[object Object]"
            data-testid="remove-param-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
            data-v-a1936218=""
          >
            <svg
              fill="none"
              viewBox="0 0 40 40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="primary"
                d="M20 35.0005C11.7287 35.0005 5 28.2717 5 20.0005C5 11.7292 11.7287 5.00049 20 5.00049C28.2712 5.00049 35 11.7292 35 20.0005C35 28.2717 28.2712 35.0005 20 35.0005ZM20 6.87549C12.7625 6.87549 6.875 12.763 6.875 20.0005C6.875 27.238 12.7625 33.1255 20 33.1255C27.2375 33.1255 33.125 27.238 33.125 20.0005C33.125 12.763 27.2375 6.87549 20 6.87549Z"
                fill="#3B414D"
              />
              <path
                class="primary"
                d="M25.625 26.563C25.375 26.563 25.1388 26.4655 24.9625 26.288L20 21.3255L15.0388 26.288C14.8625 26.4655 14.6263 26.563 14.3763 26.563C14.1263 26.563 13.89 26.4655 13.7138 26.288C13.5363 26.1105 13.4388 25.8755 13.4388 25.6255C13.4388 25.3755 13.5363 25.1392 13.7138 24.963L18.6738 20.0005L13.7113 15.038C13.5338 14.8617 13.4363 14.6255 13.4363 14.3755C13.4363 14.1255 13.5338 13.8892 13.7113 13.713C13.8875 13.5355 14.1238 13.438 14.3738 13.438C14.6238 13.438 14.86 13.5355 15.0363 13.713L19.9988 18.6755L24.96 13.713C25.1375 13.5355 25.3725 13.438 25.6225 13.438C25.8725 13.438 26.1088 13.5355 26.285 13.713C26.4625 13.8892 26.56 14.1255 26.56 14.3755C26.56 14.6255 26.4625 14.8617 26.285 15.038L21.325 20.0005L26.2875 24.963C26.465 25.1405 26.5625 25.3755 26.5625 25.6255C26.5625 25.8755 26.465 26.1117 26.2875 26.288C26.11 26.4642 25.875 26.563 25.625 26.563Z"
                fill="#3B414D"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ParamElement update handles filter change from correct param after param change 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="param"
        data-draggable="true"
      >
        <div
          class="moveIcon"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <button
              class="unnnic-button unnnic-button--size-small unnnic-button--terciary unnnic-button-scheme-- unnnic-button--icon-on-center"
              data-draggable="true"
              data-passed-props="[object Object]"
              data-v-00f478da=""
            >
              <!---->
              <!---->
              <span
                class="unnnic-icon unnnic-icon__size--sm"
                data-v-00f478da=""
                data-v-a1936218=""
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="primary"
                    clip-rule="evenodd"
                    d="M7.91422 2.00989C7.86649 2.02164 7.82897 2.03857 7.79282 2.06468C7.74877 2.09651 3.54653 6.30199 3.52607 6.33472C3.50908 6.36192 3.48965 6.40724 3.47876 6.44512C3.47512 6.45777 3.47253 6.49256 3.47249 6.52912C3.47245 6.57971 3.4745 6.59875 3.48334 6.62971C3.51797 6.75101 3.61974 6.85233 3.74065 6.88586C3.76225 6.89185 3.78827 6.89385 3.84174 6.89362C3.90591 6.89335 3.91779 6.89197 3.95107 6.88089C4.03806 6.85193 3.87354 7.01214 6.02937 4.85694L8.00101 2.88589L9.97264 4.85694C12.1296 7.01331 11.9645 6.85256 12.0509 6.88056C12.1015 6.89694 12.1868 6.90098 12.2419 6.8896C12.3223 6.87299 12.4043 6.82035 12.4562 6.75198C12.5112 6.67955 12.5296 6.6236 12.5295 6.52912C12.5295 6.49256 12.5269 6.45777 12.5233 6.44512C12.5124 6.40724 12.4929 6.36192 12.4759 6.33472C12.4555 6.30199 8.25324 2.09651 8.20919 2.06468C8.12948 2.0071 8.01329 1.98552 7.91422 2.00989ZM3.79339 9.10481C3.74621 9.11027 3.69174 9.12854 3.6508 9.15264C3.60962 9.17687 3.5463 9.2393 3.52323 9.2784C3.4526 9.39811 3.45254 9.53867 3.52308 9.66011C3.53538 9.68128 4.02231 10.1712 5.64881 11.7988C6.8092 12.9599 7.77156 13.9193 7.7874 13.9306C7.90755 14.0169 8.06109 14.0231 8.19195 13.9471C8.21312 13.9348 8.70302 13.4479 10.3306 11.8214C11.4918 10.661 12.4511 9.69861 12.4625 9.68277C12.5114 9.61453 12.5295 9.5569 12.5295 9.46917C12.5295 9.42155 12.5273 9.40144 12.5188 9.37169C12.4529 9.14042 12.194 9.03352 11.9818 9.14993C11.9525 9.16598 11.7404 9.37651 9.97505 11.1413L8.00101 13.1148L6.02458 11.139L4.04814 9.16328L4.00254 9.14115C3.93469 9.1082 3.86652 9.09636 3.79339 9.10481Z"
                    fill="#D0D3D9"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="unnnic-button__label"
                data-v-00f478da=""
              >
                  
              </span>
              <!---->
            </button>
          </div>
        </div>
        <div
          class="choice "
          style="flex: 1;"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_service_call_param"
            >
              <!---->
              <span
                class="dropdown"
                data-v-6fe2671f=""
              >
                <div
                  data-v-2d3b8b50=""
                  data-v-6fe2671f=""
                  readonly="readonly"
                  style="position: relative;"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="arrow-button-down-1"
                    iconrightclickable="true"
                    placeholder="Param"
                    readonly="readonly"
                    size="16"
                    type="text"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-dark"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  __use_react_component_wrap=""
                  data-v-6fe2671f=""
                  style="all: unset;"
                >
                  <option
                    label="Identificação"
                    value="Identificação"
                  >
                    Identificação
                  </option>
                  <option
                    label="Endereço"
                    value="Endereço"
                  >
                    Endereço
                  </option>
                  <option
                    label="Telefone e Email"
                    value="Telefone e Email"
                  >
                    Telefone e Email
                  </option>
                  <option
                    label="Observações"
                    value="Observações"
                  >
                    Observações
                  </option>
                </div>
                <div
                  class="dropdown-data"
                  data-v-6fe2671f=""
                  style="position: fixed; top: 0px;"
                />
              </span>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="choice "
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_service_call_param_filter"
            >
              <!---->
              <span
                class="dropdown"
                data-v-6fe2671f=""
              >
                <div
                  data-v-2d3b8b50=""
                  data-v-6fe2671f=""
                  readonly="readonly"
                  style="position: relative;"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="arrow-button-down-1"
                    iconrightclickable="true"
                    placeholder="Filter"
                    readonly="readonly"
                    size="16"
                    type="text"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-dark"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  __use_react_component_wrap=""
                  data-v-6fe2671f=""
                  style="all: unset;"
                >
                  <option
                    label="DDD do Celular 2"
                    value="cDDDCel2"
                  >
                    DDD do Celular 2
                  </option>
                  <option
                    label="DDD do celular 1"
                    value="cDDDCel1"
                  >
                    DDD do celular 1
                  </option>
                  <option
                    label="Número do Celular 1"
                    value="cNumCel1"
                  >
                    Número do Celular 1
                  </option>
                  <option
                    label="DDD do Celular 2"
                    value="cDDDCel2"
                  >
                    DDD do Celular 2
                  </option>
                  <option
                    label="Número do Celular 2"
                    value="cNumCel2"
                  >
                    Número do Celular 2
                  </option>
                  <option
                    label="DDD do Telefone"
                    value="cDDDTel"
                  >
                    DDD do Telefone
                  </option>
                  <option
                    label="Número do Telefone"
                    value="cNumTel"
                  >
                    Número do Telefone
                  </option>
                  <option
                    label="DDD do Fax"
                    value="cDDDFax"
                  >
                    DDD do Fax
                  </option>
                  <option
                    label="Número do Fax"
                    value="cNumFax"
                  >
                    Número do Fax
                  </option>
                  <option
                    label="E-mail do contato"
                    value="cEmail"
                  >
                    E-mail do contato
                  </option>
                  <option
                    label="WebSite"
                    value="cWebsite"
                  >
                    WebSite
                  </option>
                </div>
                <div
                  class="dropdown-data"
                  data-v-6fe2671f=""
                  style="position: fixed; top: 0px;"
                />
              </span>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="data"
        >
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select completionInput"
                data-passed-props="[object Object]"
                data-testid="Service Call Param Data"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      placeholder="Buscar por"
                      size="8"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          data-draggable="true"
          data-use-vue-component-wrap=""
        >
          <span
            class="unnnic-icon unnnic-icon__size--sm unnnic--clickable unnnic-icon-scheme--neutral-cloudy remove_icon"
            data-passed-props="[object Object]"
            data-testid="remove-param-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
            data-v-a1936218=""
          >
            <svg
              fill="none"
              viewBox="0 0 40 40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="primary"
                d="M20 35.0005C11.7287 35.0005 5 28.2717 5 20.0005C5 11.7292 11.7287 5.00049 20 5.00049C28.2712 5.00049 35 11.7292 35 20.0005C35 28.2717 28.2712 35.0005 20 35.0005ZM20 6.87549C12.7625 6.87549 6.875 12.763 6.875 20.0005C6.875 27.238 12.7625 33.1255 20 33.1255C27.2375 33.1255 33.125 27.238 33.125 20.0005C33.125 12.763 27.2375 6.87549 20 6.87549Z"
                fill="#3B414D"
              />
              <path
                class="primary"
                d="M25.625 26.563C25.375 26.563 25.1388 26.4655 24.9625 26.288L20 21.3255L15.0388 26.288C14.8625 26.4655 14.6263 26.563 14.3763 26.563C14.1263 26.563 13.89 26.4655 13.7138 26.288C13.5363 26.1105 13.4388 25.8755 13.4388 25.6255C13.4388 25.3755 13.5363 25.1392 13.7138 24.963L18.6738 20.0005L13.7113 15.038C13.5338 14.8617 13.4363 14.6255 13.4363 14.3755C13.4363 14.1255 13.5338 13.8892 13.7113 13.713C13.8875 13.5355 14.1238 13.438 14.3738 13.438C14.6238 13.438 14.86 13.5355 15.0363 13.713L19.9988 18.6755L24.96 13.713C25.1375 13.5355 25.3725 13.438 25.6225 13.438C25.8725 13.438 26.1088 13.5355 26.285 13.713C26.4625 13.8892 26.56 14.1255 26.56 14.3755C26.56 14.6255 26.4625 14.8617 26.285 15.038L21.325 20.0005L26.2875 24.963C26.465 25.1405 26.5625 25.3755 26.5625 25.6255C26.5625 25.8755 26.465 26.1117 26.2875 26.288C26.11 26.4642 25.875 26.563 25.625 26.563Z"
                fill="#3B414D"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ParamElement update handles param change 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="param"
        data-draggable="true"
      >
        <div
          class="moveIcon"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <button
              class="unnnic-button unnnic-button--size-small unnnic-button--terciary unnnic-button-scheme-- unnnic-button--icon-on-center"
              data-draggable="true"
              data-passed-props="[object Object]"
              data-v-00f478da=""
            >
              <!---->
              <!---->
              <span
                class="unnnic-icon unnnic-icon__size--sm"
                data-v-00f478da=""
                data-v-a1936218=""
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="primary"
                    clip-rule="evenodd"
                    d="M7.91422 2.00989C7.86649 2.02164 7.82897 2.03857 7.79282 2.06468C7.74877 2.09651 3.54653 6.30199 3.52607 6.33472C3.50908 6.36192 3.48965 6.40724 3.47876 6.44512C3.47512 6.45777 3.47253 6.49256 3.47249 6.52912C3.47245 6.57971 3.4745 6.59875 3.48334 6.62971C3.51797 6.75101 3.61974 6.85233 3.74065 6.88586C3.76225 6.89185 3.78827 6.89385 3.84174 6.89362C3.90591 6.89335 3.91779 6.89197 3.95107 6.88089C4.03806 6.85193 3.87354 7.01214 6.02937 4.85694L8.00101 2.88589L9.97264 4.85694C12.1296 7.01331 11.9645 6.85256 12.0509 6.88056C12.1015 6.89694 12.1868 6.90098 12.2419 6.8896C12.3223 6.87299 12.4043 6.82035 12.4562 6.75198C12.5112 6.67955 12.5296 6.6236 12.5295 6.52912C12.5295 6.49256 12.5269 6.45777 12.5233 6.44512C12.5124 6.40724 12.4929 6.36192 12.4759 6.33472C12.4555 6.30199 8.25324 2.09651 8.20919 2.06468C8.12948 2.0071 8.01329 1.98552 7.91422 2.00989ZM3.79339 9.10481C3.74621 9.11027 3.69174 9.12854 3.6508 9.15264C3.60962 9.17687 3.5463 9.2393 3.52323 9.2784C3.4526 9.39811 3.45254 9.53867 3.52308 9.66011C3.53538 9.68128 4.02231 10.1712 5.64881 11.7988C6.8092 12.9599 7.77156 13.9193 7.7874 13.9306C7.90755 14.0169 8.06109 14.0231 8.19195 13.9471C8.21312 13.9348 8.70302 13.4479 10.3306 11.8214C11.4918 10.661 12.4511 9.69861 12.4625 9.68277C12.5114 9.61453 12.5295 9.5569 12.5295 9.46917C12.5295 9.42155 12.5273 9.40144 12.5188 9.37169C12.4529 9.14042 12.194 9.03352 11.9818 9.14993C11.9525 9.16598 11.7404 9.37651 9.97505 11.1413L8.00101 13.1148L6.02458 11.139L4.04814 9.16328L4.00254 9.14115C3.93469 9.1082 3.86652 9.09636 3.79339 9.10481Z"
                    fill="#D0D3D9"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="unnnic-button__label"
                data-v-00f478da=""
              >
                  
              </span>
              <!---->
            </button>
          </div>
        </div>
        <div
          class="choice "
          style="flex: 1;"
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_service_call_param"
            >
              <!---->
              <span
                class="dropdown"
                data-v-6fe2671f=""
              >
                <div
                  data-v-2d3b8b50=""
                  data-v-6fe2671f=""
                  readonly="readonly"
                  style="position: relative;"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="arrow-button-down-1"
                    iconrightclickable="true"
                    placeholder="Param"
                    readonly="readonly"
                    size="16"
                    type="text"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-dark"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  __use_react_component_wrap=""
                  data-v-6fe2671f=""
                  style="all: unset;"
                >
                  <option
                    label="Identificação"
                    value="Identificação"
                  >
                    Identificação
                  </option>
                  <option
                    label="Endereço"
                    value="Endereço"
                  >
                    Endereço
                  </option>
                  <option
                    label="Telefone e Email"
                    value="Telefone e Email"
                  >
                    Telefone e Email
                  </option>
                  <option
                    label="Observações"
                    value="Observações"
                  >
                    Observações
                  </option>
                </div>
                <div
                  class="dropdown-data"
                  data-v-6fe2671f=""
                  style="position: fixed; top: 0px;"
                />
              </span>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="choice "
        >
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_service_call_param_filter"
            >
              <!---->
              <span
                class="dropdown"
                data-v-6fe2671f=""
              >
                <div
                  data-v-2d3b8b50=""
                  data-v-6fe2671f=""
                  readonly="readonly"
                  style="position: relative;"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="arrow-button-down-1"
                    iconrightclickable="true"
                    placeholder="Filter"
                    readonly="readonly"
                    size="16"
                    type="text"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-dark"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="primary"
                        d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  __use_react_component_wrap=""
                  data-v-6fe2671f=""
                  style="all: unset;"
                >
                  <option
                    label="DDD do celular 1"
                    value="cDDDCel1"
                  >
                    DDD do celular 1
                  </option>
                  <option
                    label="DDD do celular 1"
                    value="cDDDCel1"
                  >
                    DDD do celular 1
                  </option>
                  <option
                    label="Número do Celular 1"
                    value="cNumCel1"
                  >
                    Número do Celular 1
                  </option>
                  <option
                    label="DDD do Celular 2"
                    value="cDDDCel2"
                  >
                    DDD do Celular 2
                  </option>
                  <option
                    label="Número do Celular 2"
                    value="cNumCel2"
                  >
                    Número do Celular 2
                  </option>
                  <option
                    label="DDD do Telefone"
                    value="cDDDTel"
                  >
                    DDD do Telefone
                  </option>
                  <option
                    label="Número do Telefone"
                    value="cNumTel"
                  >
                    Número do Telefone
                  </option>
                  <option
                    label="DDD do Fax"
                    value="cDDDFax"
                  >
                    DDD do Fax
                  </option>
                  <option
                    label="Número do Fax"
                    value="cNumFax"
                  >
                    Número do Fax
                  </option>
                  <option
                    label="E-mail do contato"
                    value="cEmail"
                  >
                    E-mail do contato
                  </option>
                  <option
                    label="WebSite"
                    value="cWebsite"
                  >
                    WebSite
                  </option>
                </div>
                <div
                  class="dropdown-data"
                  data-v-6fe2671f=""
                  style="position: fixed; top: 0px;"
                />
              </span>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="data"
        >
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select completionInput"
                data-passed-props="[object Object]"
                data-testid="Service Call Param Data"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      placeholder="Buscar por"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          data-draggable="true"
          data-use-vue-component-wrap=""
        >
          <span
            class="unnnic-icon unnnic-icon__size--sm unnnic--clickable unnnic-icon-scheme--neutral-cloudy remove_icon"
            data-passed-props="[object Object]"
            data-testid="remove-param-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
            data-v-a1936218=""
          >
            <svg
              fill="none"
              viewBox="0 0 40 40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="primary"
                d="M20 35.0005C11.7287 35.0005 5 28.2717 5 20.0005C5 11.7292 11.7287 5.00049 20 5.00049C28.2712 5.00049 35 11.7292 35 20.0005C35 28.2717 28.2712 35.0005 20 35.0005ZM20 6.87549C12.7625 6.87549 6.875 12.763 6.875 20.0005C6.875 27.238 12.7625 33.1255 20 33.1255C27.2375 33.1255 33.125 27.238 33.125 20.0005C33.125 12.763 27.2375 6.87549 20 6.87549Z"
                fill="#3B414D"
              />
              <path
                class="primary"
                d="M25.625 26.563C25.375 26.563 25.1388 26.4655 24.9625 26.288L20 21.3255L15.0388 26.288C14.8625 26.4655 14.6263 26.563 14.3763 26.563C14.1263 26.563 13.89 26.4655 13.7138 26.288C13.5363 26.1105 13.4388 25.8755 13.4388 25.6255C13.4388 25.3755 13.5363 25.1392 13.7138 24.963L18.6738 20.0005L13.7113 15.038C13.5338 14.8617 13.4363 14.6255 13.4363 14.3755C13.4363 14.1255 13.5338 13.8892 13.7113 13.713C13.8875 13.5355 14.1238 13.438 14.3738 13.438C14.6238 13.438 14.86 13.5355 15.0363 13.713L19.9988 18.6755L24.96 13.713C25.1375 13.5355 25.3725 13.438 25.6225 13.438C25.8725 13.438 26.1088 13.5355 26.285 13.713C26.4625 13.8892 26.56 14.1255 26.56 14.3755C26.56 14.6255 26.4625 14.8617 26.285 15.038L21.325 20.0005L26.2875 24.963C26.465 25.1405 26.5625 25.3755 26.5625 25.6255C26.5625 25.8755 26.465 26.1117 26.2875 26.288C26.11 26.4642 25.875 26.563 25.625 26.563Z"
                fill="#3B414D"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;
